unpackaged/main/default/objects/Prospectador_Asesor_de_Comision__c/Prospectador_Asesor_de_Comision__c.object-meta.xml
<CustomObject>
    <label>Empleado</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Empleados</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>