unpackaged/main/default/objects/Prospectador_Asesor_de_Comision__c/fields/Cantidad_Canceladas__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Canceladas__c</fullName>
    <label>Cant. Canceladas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>