unpackaged/main/default/objects/Prospectador_Asesor_de_Comision__c/fields/Cantidad_Escrituradas__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Escrituradas__c</fullName>
    <label>Cant. Escrituradas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>