unpackaged/main/default/objects/Prospectador_Asesor_de_Comision__c/fields/Comision_Buscar__c.field-meta.xml
<CustomField>
    <fullName>Comision_Buscar__c</fullName>
    <label>Comisión</label>
    <referenceTo>Comision__c</referenceTo>
    <relationshipName>Prospectadores_Asesores_en_Comisiones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>