unpackaged/main/default/objects/Prospectador_Asesor_de_Comision__c/fields/Objeto_a_Aprobar__c.field-meta.xml
<CustomField>
    <fullName>Objeto_a_Aprobar__c</fullName>
    <label>Objeto a Aprobar</label>
    <length>100</length>
    <type>Text</type>
</CustomField>