unpackaged/main/default/objects/Prospectador_Asesor_de_Comision__c/fields/Total_a_Pagar__c.field-meta.xml
<CustomField>
    <fullName>Total_a_Pagar__c</fullName>
    <label>Total a Pagar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>